- combinatorics and set-theory based validation rules